--- a/revamp.css
+++ b/revamp.css
@@ -50,7 +50,7 @@ p{
 }
 
 .container {
-    color: lightgray;
+    color: lightpink;
 }
 
 .container {
@@ -140,8 +140,4 @@ p{
   
 }
 
-html{
-    background-image:"jos4.JPG";
-    
-}
 
