--- a/revamp.css
+++ b/revamp.css
@@ -40,6 +40,11 @@ h2{
 h4{
     font-family: 'Oswald', sans-serif;
     text-align: center;
+    font-size: 45px;
+}
+
+h5{
+    text-align: center;
 }
 
 p{
