--- a/revamp.css
+++ b/revamp.css
@@ -1,6 +1,3 @@
-body{
-    background-color: lightpink;
-}
 
 .navbar-brand{
     font-family: 'Leckerli One', cursive;
@@ -14,6 +11,10 @@ h3{
     font-family: 'Oswald', sans-serif;
     text-align: center;
     color: black;
+}
+
+body {
+    background-color: antiquewhite;
 }
 
 .navbar-nav{
