--- a/revamp.css
+++ b/revamp.css
@@ -32,7 +32,7 @@ h1 {
     text-align: center;
     font-family: 'Leckerli One', cursive;
     font-size: 35px;
-    color: gray;
+    color: red;
 }
 
 h2{ 
